--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.0",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-webcam": "^7.2.0"
   },
