--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "nss-day-website",
+  "name": "virtual-photo-booth",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "webpack serve --open",
+    "build": "webpack",
+    "start": "webpack --watch",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "webpack serve --config webpack.config.js"
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -23,15 +24,23 @@
     "react-webcam": "^7.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
     "@eslint/js": "^9.9.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
+    "babel-loader": "^9.2.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "html-webpack-plugin": "^5.6.0",
+    "vite": "^5.4.1",
+    "webpack": "^5.95.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
